--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="description" content="Name of your web site">
+    <meta name="description" content="Portfolio">
     <meta name="author" content="Marketify">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>DT-Portfolio | Home</title>
@@ -56,7 +56,7 @@
                             <ul>
                                 <li><a href="https://www.youtube.com/channel/UC5c0xSoHaAGHi21Cg9ChBSA"><img class="svg"
                                             src="img/svg/social/youtube.svg" alt="" /></a></li>
-                                <li><a href="https://www.instagram.com/satyaaa_05"><img class="svg"
+                                <li><a href="https://www.instagram.com/dtrstya"><img class="svg"
                                             src="img/svg/social/instagram.svg" alt="" /></a></li>
                             </ul>
                         </div>
@@ -182,7 +182,7 @@
                                         </li>
                                         <li>
                                             <h3>Birthday</h3>
-                                            <span>October 1, 2001</span>
+                                            <span>October 10, 2000</span>
                                         </li>
                                         <li>
                                             <h3>Mail</h3>
@@ -191,12 +191,11 @@
                                         </li>
                                         <li>
                                             <h3>Phone</h3>
-                                            <span>+62 877 3023 4000</span>
+                                            <span>+62 877 xxxx xxxx</span>
                                         </li>
                                         <li>
                                             <h3>Address</h3>
-                                            <span>40, Desa Kalisapu, Kecamatan Slawi, Kabupaten Tegal, Jawa
-                                                Tengah</span>
+                                            <span>40, Semarang, Central Java</span>
                                         </li>
                                         <li>
                                             <h3>Nationality</h3>
