--- a/index-dark.html
+++ b/index-dark.html
@@ -48,7 +48,7 @@
 <div class="social">
 <ul>
 <li><a href="https://www.youtube.com/channel/UC5c0xSoHaAGHi21Cg9ChBSA"><img class="svg" src="img/svg/social/youtube.svg" alt="" /></a></li>
-<li><a href="https://www.instagram.com/satyaaa_05"><img class="svg" src="img/svg/social/instagram.svg" alt="" /></a></li>
+<li><a href="https://www.instagram.com/dtrstya"><img class="svg" src="img/svg/social/instagram.svg" alt="" /></a></li>
 </ul>
 </div>
 <!-- <div class="iknow_tm_button">
@@ -173,7 +173,7 @@
 </li>
 <li>
 <h3>Birthday</h3>
-<span>October 1, 2001</span>
+<span>October 10, 2000</span>
 </li>
 <li>
 <h3>Mail</h3>
@@ -181,11 +181,11 @@
 </li>
 <li>
 <h3>Phone</h3>
-<span>+62 877 3023 4000</span>
+<span>+62 877 xxxx xxxx</span>
 </li>
 <li>
 <h3>Address</h3>
-<span>40, Desa Kalisapu, Kecamatan Slawi, Kabupaten Tegal, Jawa Tengah</span>
+<span>40, Semarang, Central Java</span>
 </li>
 <li>
 <h3>Nationality</h3>
